Fix spacing issues for user editor.

--- a/src/components/UsersEditor/UsersEditor.scss
+++ b/src/components/UsersEditor/UsersEditor.scss
@@ -7,7 +7,7 @@
 
 table {
     border-collapse: collapse;
-    width: 90%;
+    width: 100%;
 }
 
 table td, th {
